syntax = "proto3";
package astro_canvas.x.interchain_account.v1;

option go_package = "github.com/chainapsis/cosmos-sdk-ibc-account/x/ibc-account/types";

message RegisterIBCAccountPacketData {
    string salt = 1;
}

message RunTxPacketData {
    bytes txBytes = 1;
}

message RegisterIBCAccountPacketAcknowledgement {
    string chainID = 1;
    bool   success = 2;
    string error = 3;
}

message RunTxPacketAcknowledgement {
    string chainID = 1;
    uint32 code = 2;
    string error = 3;
}